--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deploy": "wrangler deploy src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.0.0"
+    "hono": "^4.0.0",
+    "@libsql/client": "^0.4.0-pre.7"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
