--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
   },
   "dependencies": {
     "@libsql/client": "^0.4.0-pre.7",
-    "hono": "^4.6.15"
+    "hono": "^4.6.15",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
-    "wrangler": "^3.22.1"
+    "@eslint/js": "^9.32.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.32.0",
+    "globals": "^16.3.0",
+    "typescript-eslint": "^8.39.0",
+    "wrangler": "^4.28.0"
   }
 }
